@@ -1,3 +1,7 @@
+2003-12-10  Gary Thomas  <gary@mlbassoc.com>
+
+	* include/netinet/in.h: Prototype for inet_ntoa_r()
+
 2003-11-22  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* include/net/if_gif.h include/net/if_sec.h include/net/zlib.h
